# semantically-guided-video-compression

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
extracted-datasets/: README.md
extracted-datasets/example-collection/: metadata.txt
scripts/: dataset_from_research_robot.py  extract-dataset-from-ros2.py  rgb_and_map_from_dataset.py  rgb_frames_from_dataset.py  run_create_cuboid.py  run_create_fov_histogram.py  run_create_trajectory_histogram.py  run_framewise_compression_ratio.py  run_full_comparison_suite.py  run_geometric_compression_ratio.py  run_naive_compression.py  run_pose_and_semantic_compression.py  run_pose_only_compression.py  run_semantic_compression_ratio.py  run_semantic_only_compression.py
src/compression/: naive_compression.py  pose_and_semantic_compression.py  pose_only_compression.py  semantic_only_compression.py
src/dataset_stream/: dataset_stream.py  dataset_writer.py
src/evaluation/: compression_ratio.py  geometric_coverage.py  k_mean_metrics_investigation.py  semantic_coverage.py  semantic_coverage_CLIP.py
src/inference/: CLIP.py  DINO.py
src/visualization/: cuboid_density.py  fov_histogram.py  trajectory_histogram.py
src/visualization_helpers/: cuboid_density.py  fov_histogram.py  trajectory_histogram.py
