[project]
name = "semantic-video-compression"
version = "0.1.0"
requires-python = ">=3.9"
description = "Video compression algorithm which seeks to compress video by finding the subset of frames/clips which retain the semantics of the video"
readme = "README.md"
dependencies = [
    # Perception-stack dependencies (consolidated from perception-stack/requirements.txt)
    "pydantic>=1.10.0,<2.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "ffmpeg-python>=0.2.0",
    "rosbags>=0.9.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


